added a whole new file namely polars playground and modified a bunch of files

--- a/PyArrow.ipynb
+++ b/PyArrow.ipynb
@@ -58,8 +58,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T23:42:09.552735Z",
-     "start_time": "2025-10-23T23:42:09.550893Z"
+     "end_time": "2025-10-26T15:50:53.477026Z",
+     "start_time": "2025-10-26T15:50:53.475243Z"
     }
    },
    "cell_type": "code",
@@ -79,13 +79,13 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T23:45:11.690554Z",
-     "start_time": "2025-10-23T23:45:11.687629Z"
+     "end_time": "2025-10-26T15:50:53.499297Z",
+     "start_time": "2025-10-26T15:50:53.496946Z"
     }
    },
    "cell_type": "code",
@@ -114,13 +114,13 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T23:49:14.572030Z",
-     "start_time": "2025-10-23T23:49:14.568917Z"
+     "end_time": "2025-10-26T15:50:53.514248Z",
+     "start_time": "2025-10-26T15:50:53.512172Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +151,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -165,8 +165,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T23:56:20.893193Z",
-     "start_time": "2025-10-23T23:56:20.890380Z"
+     "end_time": "2025-10-26T15:50:53.523421Z",
+     "start_time": "2025-10-26T15:50:53.521492Z"
     }
    },
    "cell_type": "code",
@@ -188,13 +188,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T00:13:07.998181Z",
-     "start_time": "2025-10-24T00:13:07.995099Z"
+     "end_time": "2025-10-26T15:50:53.540653Z",
+     "start_time": "2025-10-26T15:50:53.538473Z"
     }
    },
    "cell_type": "code",
@@ -226,13 +226,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:03:50.207113Z",
-     "start_time": "2025-10-24T01:03:50.204594Z"
+     "end_time": "2025-10-26T15:50:53.569039Z",
+     "start_time": "2025-10-26T15:50:53.566700Z"
     }
    },
    "cell_type": "code",
@@ -266,7 +266,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -280,8 +280,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:03:53.974912Z",
-     "start_time": "2025-10-24T01:03:53.972931Z"
+     "end_time": "2025-10-26T15:50:53.591314Z",
+     "start_time": "2025-10-26T15:50:53.588806Z"
     }
    },
    "cell_type": "code",
@@ -316,13 +316,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:04:01.280216Z",
-     "start_time": "2025-10-24T01:04:01.278267Z"
+     "end_time": "2025-10-26T15:50:53.611004Z",
+     "start_time": "2025-10-26T15:50:53.609031Z"
     }
    },
    "cell_type": "code",
@@ -359,7 +359,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -438,8 +438,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T00:55:41.777455Z",
-     "start_time": "2025-10-24T00:55:41.775595Z"
+     "end_time": "2025-10-26T15:50:53.635810Z",
+     "start_time": "2025-10-26T15:50:53.633921Z"
     }
    },
    "cell_type": "code",
@@ -458,7 +458,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -473,8 +473,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:02:29.017894Z",
-     "start_time": "2025-10-24T01:02:29.015706Z"
+     "end_time": "2025-10-26T15:50:53.666150Z",
+     "start_time": "2025-10-26T15:50:53.664041Z"
     }
    },
    "cell_type": "code",
@@ -513,7 +513,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 21
   },
   {
    "metadata": {
@@ -562,8 +562,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:33:05.727231Z",
-     "start_time": "2025-10-24T01:33:05.680107Z"
+     "end_time": "2025-10-26T15:50:53.697675Z",
+     "start_time": "2025-10-26T15:50:53.696212Z"
     }
    },
    "cell_type": "code",
@@ -571,28 +571,21 @@
     "# We shall now try to save our table into an actual parquet file\n",
     "import pyarrow.dataset as ds\n",
     "\n",
-    "ds.write_dataset(birthdays_table, \"birthday_details\", format='parquet',\n",
-    "                 partitioning=ds.partitioning(pa.schema([birthdays_table.schema.field(\"years\")])))\n",
-    "\n",
-    "print(\"Saving/ Updation completed\")"
+    "# ds.write_dataset(birthdays_table, \"birthday_details\", format='parquet',\n",
+    "#                  partitioning=ds.partitioning(pa.schema([birthdays_table.schema.field(\"years\")])))\n",
+    "#\n",
+    "# print(\"Saving/ Updation completed\")\n",
+    "# We have done it once no need to do it again."
    ],
    "id": "d5d45b8e6805314d",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving/ Updation completed\n"
-     ]
-    }
-   ],
-   "execution_count": 24
+   "outputs": [],
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:35:24.709005Z",
-     "start_time": "2025-10-24T01:35:24.702770Z"
+     "end_time": "2025-10-26T15:50:53.730374Z",
+     "start_time": "2025-10-26T15:50:53.717800Z"
     }
    },
    "cell_type": "code",
@@ -612,13 +605,13 @@
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:39:53.710456Z",
-     "start_time": "2025-10-24T01:39:53.708348Z"
+     "end_time": "2025-10-26T15:50:53.746959Z",
+     "start_time": "2025-10-26T15:50:53.745339Z"
     }
    },
    "cell_type": "code",
@@ -639,7 +632,7 @@
    ],
    "id": "40f412b97b1a1fab",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 24
   },
   {
    "metadata": {
@@ -663,8 +656,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:43:10.611268Z",
-     "start_time": "2025-10-24T01:43:10.607898Z"
+     "end_time": "2025-10-26T15:50:53.766472Z",
+     "start_time": "2025-10-26T15:50:53.758025Z"
     }
    },
    "cell_type": "code",
@@ -690,13 +683,13 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T01:45:54.273439Z",
-     "start_time": "2025-10-24T01:45:54.270648Z"
+     "end_time": "2025-10-26T15:50:53.775177Z",
+     "start_time": "2025-10-26T15:50:53.771755Z"
     }
    },
    "cell_type": "code",
@@ -723,15 +716,217 @@
      ]
     }
    ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.782763Z",
+     "start_time": "2025-10-26T15:50:53.781420Z"
+    }
+   },
+   "cell_type": "markdown",
+   "source": "## **Data Types and In-Memory Data Model**",
+   "id": "d979e631ec67e499"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.804788Z",
+     "start_time": "2025-10-26T15:50:53.803550Z"
+    }
+   },
+   "cell_type": "markdown",
+   "source": [
+    "- `pyarrow.DataType`, which descibes the type of an array and also govern how its values are interpreted.\n",
+    "\n",
+    "- `pyarrow.Schema`, which describe a named collection of types. These can be thought of as the column types in a table-like object.\n",
+    "\n",
+    "- `pyarrow.Array`,(instances) which are atomic, contiguous columnar data structures composed from Arrow Buffer objects.\n",
+    "\n",
+    "- `pyarrow.RecordBatch`, which are a collection of Array objects with a particular Schema\n",
+    "\n",
+    "- `pyarrow.Table`, a logical table data structure in which each column consists of one or more pyarrow.Array objects of the same type.\n"
+   ],
+   "id": "bec506342c94af90"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.808863Z",
+     "start_time": "2025-10-26T15:50:53.807745Z"
+    }
+   },
+   "cell_type": "markdown",
+   "source": [
+    "## **Type Metadata**\n",
+    "\n",
+    "Apache Arrow defines language agnostic column-oriented data structures for array data.\n",
+    "\n",
+    "##### The meaning of all these are -\n",
+    "\n",
+    "- `Language-agnostic` : not tied to any single programming language, meaning we can use Python, R, C++, JAVA, Rust, Go, etc. All thess language share a common in-memory format, so we could pass data between them without conversion.\n",
+    "\n",
+    "- `Column-oriented` : data structures: This means that Arrow stores data column-by-column, not row-by-row (like traditional Python lists or C arrays). See example prior to this cell.\n",
+    "\n",
+    "- `For array data : Arrow is optimized for array-like data — that is, tables, vectors, and columns with one data type (integers, floats, strings, etc.).\n",
+    "\n",
+    "Each column in Arrow is essentially a high-performance array that supports:\n",
+    "\t•\tZero-copy slicing\n",
+    "\t•\tSIMD acceleration (fast CPU vector operations)\n",
+    "\t•\tMemory alignment for speed\n",
+    "\n",
+    "So you can think of each column as a NumPy-like array but shared across languages\n",
+    "\n",
+    "#### So we can think of each column as  -- `NumPy-like array`--  but shared across languages."
+   ],
+   "id": "11ae66da58948acb"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T21:29:03.269657Z",
+     "start_time": "2025-10-26T21:29:03.267561Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "t1 = pa.int32()\n",
+    "\n",
+    "t2 = pa.string()\n",
+    "\n",
+    "t3 = pa.binary()\n",
+    "\n",
+    "t4 = pa.binary(10)\n",
+    "\n",
+    "t5 = pa.timestamp('ms')\n",
+    "\n",
+    "t6 = pa.list_(t1)\n",
+    "\n",
+    "print(t1,\"\",t2,\"\",t3,\"\",t4,\"\",t5,\"\",t6)\n",
+    "\n",
+    "# Here is a quick view of the different data-types (Not all of them)"
+   ],
+   "id": "8dc403c1ef5ce74b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int32  string  binary  fixed_size_binary[10]  timestamp[ms]  list<item: int32>\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T21:29:59.139411Z",
+     "start_time": "2025-10-26T21:29:59.137286Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "fields = [\n",
+    "    pa.field('s0', t1),\n",
+    "    pa.field('s1', t2),\n",
+    "    pa.field('s2', t4),\n",
+    "    pa.field('s3', t6),\n",
+    "]\n",
+    "\n",
+    "t7 = pa.struct(fields)\n",
+    "print(t7)"
+   ],
+   "id": "a247d6de4ac9775",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "struct<s0: int32, s1: string, s2: fixed_size_binary[10], s3: list<item: int32>>\n"
+     ]
+    }
+   ],
    "execution_count": 30
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.819293Z",
+     "start_time": "2025-10-26T15:50:53.818063Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "cd2515d2b1691920"
+   "id": "631f8b5b08480d31",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.822852Z",
+     "start_time": "2025-10-26T15:50:53.821655Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "c1ee39b57d5027b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.826450Z",
+     "start_time": "2025-10-26T15:50:53.825428Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "9e969d0f833400b7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.830265Z",
+     "start_time": "2025-10-26T15:50:53.829054Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "45e2a03d5544be97",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.834127Z",
+     "start_time": "2025-10-26T15:50:53.832917Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "527eeb529989c49d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T15:50:53.837140Z",
+     "start_time": "2025-10-26T15:50:53.835983Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "dbe265c840a81c25",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
